--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,3 +182,54 @@ input[type=submit]:hover {
 form {
     padding-top: 15px;
 }
+
+@media screen and (max-width: 980px) {
+    .contentBox {
+        width: 55%;        
+        margin-top: 120px;
+        margin-left: 5%;
+    }
+    .headerContent {
+        width: 90%;
+        margin-left: 5%;
+    }    
+    .topnav-right {
+        float: right;
+        margin-top: 15px;
+        margin-bottom: auto;
+        color: #777;
+    }
+    body {
+      margin: 0px;
+    }
+    input[type=text], select, textarea {
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }    
+
+    .projectsContainer {
+        margin-top:20px;  
+        width: 100%;
+        z-index: 2;
+        overflow: hidden;
+        padding: 0px;
+    }
+
+    .projectLink {
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .contentBox {
+        width: 83%;        
+        margin-top: 120px;
+        margin-left: 5%;
+    }
+
+}
+
+@media screen and (max-width: 640px) {
+
+
+}
