--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,67 @@ form {
 }
 
 @media screen and (max-width: 640px) {
+    .topnav {
+        border-bottom: 0px;
+        background-color: #4aaaa5;
+        overflow: hidden;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        margin-bottom: 0;
+        margin: auto;
+        z-index:3;
+    }
+
+    h1 {
+        float: left;
+        margin-left: 30%;
+        background: #4aaaa5;
+        padding: 20px;
+        color: white;
+        width: 100%;
+        
+    }
+
+    .headerContent {
+        width: 100%;
+        margin: auto;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .topnav-right {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 30%;
+        color: #777;
+        background-color: white;
+        border-bottom: 2px solid #ccc;
+        width: 100%;
+        position: fixed;
+        top: 62px;
+        align-content: center;
+    }
+
+    .contentBox {
+        width: 83%;        
+        margin-top: 180px;
+        margin-left: 5%;
+    }
+
+    .projectLink {
+        width: 100%;
+        height: 100%;
+    }
+
+    .projectTitle {
+        bottom: 25px;
+        padding-top: 7px;
+        padding-bottom: 7px;
+        font-size: 18pt;
+    }
 
 
 }
+
